--- a/tictaktoe/tictaktoe.vcxproj
+++ b/tictaktoe/tictaktoe.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{981DD15B-493D-46E8-92F7-89CE0D704F31}</ProjectGuid>
+    <ProjectGuid>{ACDEC585-3F85-4B7B-BF55-15E3402981F2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>OurTicTakToe1</RootNamespace>
+    <RootNamespace>tictaktoe</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="OurTicTakToe1.cpp" />
+    <ClCompile Include="tictaktoe.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
